fixed most of the css conflicts

--- a/docs/assets/css/profiles.css
+++ b/docs/assets/css/profiles.css
@@ -6,13 +6,21 @@
 }
 
 .check-box-section {
-    margin-top: 20px;
+    margin-top: 20px; 
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 10px;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    gap: 10px;
 }
 
+#reset{
+    border: 2px solid #000;
+    color: #000;
+    text-transform: uppercase;
+    padding: 10px 20px;
+}
 
 /* Profile Card Styles */
 .user-work-place {
@@ -61,8 +69,8 @@
 }
 
 .round-image {
-    width: 178px;
-    height: 178px;
+    width: 150px;
+    height: 150px !important;
     object-fit: cover;
     border-radius: 50%;
     /* margin-top: 30px; */
@@ -79,11 +87,12 @@
 }
 
 .user-name {
-    line-height: 21.82px;
+    line-height: 21.82px !important; 
     text-transform: capitalize;
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 16px !important; 
+    font-weight: 700 !important;
     color: #000000;
+    margin: 0 !important;
 }
 
 .user-gender {
@@ -112,7 +121,7 @@
     width: 20px;
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     .box {
         width: calc(50% - 24px);
     }
@@ -122,7 +131,7 @@
     .box {
         width: 80%;
     }
-} */
+}
 
 /* PROFILE POPUP STYLES */
 
@@ -159,6 +168,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    padding-top: 20px;
 }
 
 /* Profile left section */
@@ -169,12 +179,16 @@
     align-items: center;
     padding: 10px;
     text-align: center;
+    position: sticky;
+    top: 20px;
+    left: 0;
+
 }
 
 .profile-picture {
     object-fit: cover;
-    width: 178px;
-    height: 178px;
+    width: 150px;
+    height: 150px !important;
     border-radius: 50%;
 }
 
@@ -188,8 +202,8 @@
 .position {
     font-size: 14px;
     font-weight: 700;
-    font-family: "Arial", sans-serif;
-    margin-top: 10px;
+    font-family: "Poppins", sans-serif;
+    margin-top: 5px;
     color: rgba(140, 140, 140, 1);
 }
 
@@ -214,22 +228,25 @@
 
 .profile-right h2 {
     font-size: 20px;
-    font-family: "Arial", sans-serif;
-    font-weight: 700;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700 !important;
+    margin: 0 0 10px !important;
 }
 
 .profile-right p {
     font-size: 14px;
     line-height: 1.6;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    text-align: justify;
 }
 
 .location {
+    margin-top: 10px;
     display: flex;
     align-items: center;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 12px;
     color: rgba(140, 140, 140, 1);
 }
@@ -263,20 +280,42 @@
     overflow-y: auto;
 }
 
+.certifications{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.certifications >  h3{
+    font-size: 15px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700 !important;
+    margin: 15px 0 0 !important;
+}
 /* CERTIFICATION STYLES */
-.cert-list-container>ul {
+.certifications>ul {
     list-style-type: none;
     list-style: none;
+    margin: 10px 0px !important;
+    font-size: 14px;
+    line-height: 1.6;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+}
+.certifications>ul li {
+    margin-left: 0px !important;
 }
 
 /* Media Queries for Responsiveness
 
 /* mobile view */
-/* @media (max-width: 600px) {
+@media (max-width: 600px) {
     .modal-content {
         width: 90%;
         padding: 20px;
     }
+
 
     .modal-body {
         flex-direction: column;
@@ -285,12 +324,7 @@
 
     .profile-left {
         align-items: center;
-        margin-bottom: 20px;
-    }
-
-    .profile-picture {
-        width: 150px;
-        height: 150px;
+        position: static;
     }
 
     .profile-right h2 {
@@ -298,19 +332,30 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 10px !important;
     }
 
     .profile-right p {
+        text-align: center;
         font-size: 14px;
     }
 
     .location {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 12px;
     }
-} */
+
+    .certifications{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
 
 /* For medium screens (tablets) */
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     .modal-content {
         width: 85%;
         padding: 30px;
@@ -328,4 +373,4 @@
         width: 160px;
         height: 160px;
     }
-}  */
+}
