--- a/docs/assets/css/profiles.css
+++ b/docs/assets/css/profiles.css
@@ -5,23 +5,6 @@
     font-family: "Poppins", sans-serif;
 }
 
-.check-box-section {
-    margin-top: 20px; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    gap: 10px;
-}
-
-#reset{
-    border: 2px solid #000;
-    color: #000;
-    text-transform: uppercase;
-    padding: 10px 20px;
-}
-
 /* Profile Card Styles */
 .user-work-place {
     font-size: 14px;
@@ -36,7 +19,7 @@
 
 .wrap {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     gap: 24px;
@@ -280,33 +263,6 @@
     overflow-y: auto;
 }
 
-.certifications{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.certifications >  h3{
-    font-size: 15px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700 !important;
-    margin: 15px 0 0 !important;
-}
-/* CERTIFICATION STYLES */
-.certifications>ul {
-    list-style-type: none;
-    list-style: none;
-    margin: 10px 0px !important;
-    font-size: 14px;
-    line-height: 1.6;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-}
-.certifications>ul li {
-    margin-left: 0px !important;
-}
-
 /* Media Queries for Responsiveness
 
 /* mobile view */
@@ -347,11 +303,11 @@
         font-size: 12px;
     }
 
-    .certifications{
+    /* .certifications{
         display: flex;
         justify-content: center;
         align-items: center;
-    }
+    } */
 }
 
 /* For medium screens (tablets) */
